--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@walletpass/pass-js": "^6.9.1",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
+    "buffer": "^6.0.3",
     "http2": "^3.3.7",
     "prettier": "^2.6.2",
     "qrcode": "^1.5.0",
